fix: replace String.isBlank() with trim().isEmpty() for Java 8 compatibility